- Fixed the UI and did come cleanup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #aaa;
+    --background: #fff;
     --foreground: #000;
   }
 }
